8270100: Fix some inaccurate GC logging

Reviewed-by: ayang, tschatzl